# self-reference

./: Cargo.toml  LICENSE.txt  README.md
src/: lib.rs  refs.rs  stable_ptr.rs  utils.rs
