[package]
name = "self-reference"
description = "A Self-Reference Helper"
license-file = "LICENSE.txt"
readme = "README.md"
version = "0.1.8"
edition = "2018"
categories = ["no-std", "rust-patterns"]
keywords = ["self-reference", "pin", "no_std"]
repository = "https://github.com/ArtBlnd/self-reference"


[dependencies]
pin-project = "1.0.12"
stable_deref_trait = "1.2.0"

[features]
default = ["std"]
std = []
